--- a/pom.xml
+++ b/pom.xml
@@ -33,5 +33,11 @@
 			<artifactId>jackson-annotations</artifactId>
 			<version>2.8.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.16.16</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 </project>
