Added @DynamoDBDocument annotation

--- a/pom.xml
+++ b/pom.xml
@@ -39,5 +39,10 @@
 			<version>1.16.16</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-dynamodb</artifactId>
+			<version>1.11.34</version>
+		</dependency>
 	</dependencies>
 </project>
