--- a/pom.xml
+++ b/pom.xml
@@ -6,54 +6,143 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>ReCiter-PubMed-Model</name>
     <description>A set of classes representing a PubMed article</description>
+    
+    
+    <scm>
+		<connection>scm:git:git://github.com/wcmc-its/ReCiter-PubMed-Model.git</connection>
+		<developerConnection>scm:git:git@github.com:wcmc-its/ReCiter-PubMed-Model.git</developerConnection>
+		<url>https://github.com/wcmc-its/ReCiter-Identity-Model</url>
+		<tag>HEAD</tag>
+	</scm>
+    
+    <distributionManagement>
+		<snapshotRepository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+		<repository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository>
+	</distributionManagement>
+	
     <properties>
         <yaml.file>${project.basedir}/model-schema/pubmed-model.yaml</yaml.file>
         <generated-sources-path>${project.build.directory}/generated-sources</generated-sources-path>
         <generated-sources-java-path>main/java</generated-sources-java-path>
+        <version.maven-release-plugin>2.5.3</version.maven-release-plugin>
+        <version.maven-gpg-plugin>1.6</version.maven-gpg-plugin>
+        <version.maven-source-plugin>3.0.1</version.maven-source-plugin>
+		<version.maven-javadoc-plugin>2.10.4</version.maven-javadoc-plugin>
     </properties>
     <build>
         <sourceDirectory>src</sourceDirectory>
-        <plugins>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.3</version>
-                <configuration>
-                    <source/>
-                    <target/>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <version>2.8.2</version>
-                <configuration>
-                    <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo
-                    </altDeploymentRepository>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>io.swagger</groupId>
-                <artifactId>swagger-codegen-maven-plugin</artifactId>
-                <version>3.0.0-rc1</version>
-                <executions>
-                    <execution>
-                        <id>generate-swagger-javaclient</id>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                        <configuration>
-                            <inputSpec>${yaml.file}</inputSpec>
-                            <configOptions>
-                                <sourceFolder>${generated-sources-java-path}</sourceFolder>
-                            </configOptions>
-                            <output>${generated-sources-path}</output>
-                            <language>java</language>
-                            <modelPackage>reciter.model.pubmed</modelPackage>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
+        <pluginManagement>
+	        <plugins>
+	            <plugin>
+	                <artifactId>maven-compiler-plugin</artifactId>
+	                <version>3.3</version>
+	                <configuration>
+	                    <source/>
+	                    <target/>
+	                </configuration>
+	            </plugin>
+	            <plugin>
+	                <artifactId>maven-deploy-plugin</artifactId>
+	                <version>2.8.2</version>
+	                <executions>
+						<execution>
+							<id>default-deploy</id>
+							<phase>deploy</phase>
+							<goals>
+								<goal>deploy</goal>
+							</goals>
+						</execution>
+					</executions>
+	            </plugin>
+	            <plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-release-plugin</artifactId>
+					<version>${version.maven-release-plugin}</version>
+					<configuration>
+						<localCheckout>true</localCheckout>
+						<pushChanges>false</pushChanges>
+						<mavenExecutorId>forked-path</mavenExecutorId>
+						<arguments>-Dgpg.passphrase=${gpg.passphrase}</arguments>
+					</configuration>
+					<dependencies>
+						<dependency>
+							<groupId>org.apache.maven.scm</groupId>
+							<artifactId>maven-scm-provider-gitexe</artifactId>
+							<version>${version.maven-scm-provider-gitexe}</version>
+						</dependency>
+					</dependencies>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-source-plugin</artifactId>
+					<version>${version.maven-source-plugin}</version>
+					<executions>
+					<execution>
+					<id>attach-sources</id>
+					<goals>
+					<goal>jar</goal>
+					</goals>
+					</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-javadoc-plugin</artifactId>
+					<version>${version.maven-javadoc-plugin}</version>
+					<configuration>
+						<encoding>UTF-8</encoding>
+					</configuration>
+					<executions>
+						<execution>
+							<id>attach-javadoc</id>
+							<goals>
+								<goal>jar</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.sonatype.plugins</groupId>
+					<artifactId>nexus-staging-maven-plugin</artifactId>
+					<version>1.6.7</version>
+					<extensions>true</extensions>
+					<configuration>
+					<serverId>ossrh</serverId>
+					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+					<autoReleaseAfterClose>true</autoReleaseAfterClose>
+					</configuration>
+				</plugin>
+	            <plugin>
+	                <groupId>io.swagger</groupId>
+	                <artifactId>swagger-codegen-maven-plugin</artifactId>
+	                <version>3.0.0-rc1</version>
+	                <executions>
+	                    <execution>
+	                        <id>generate-swagger-javaclient</id>
+	                        <phase>generate-sources</phase>
+	                        <goals>
+	                            <goal>generate</goal>
+	                        </goals>
+	                        <configuration>
+	                            <inputSpec>${yaml.file}</inputSpec>
+	                            <configOptions>
+	                                <sourceFolder>${generated-sources-java-path}</sourceFolder>
+	                            </configOptions>
+	                            <output>${generated-sources-path}</output>
+	                            <language>java</language>
+	                            <modelPackage>reciter.model.pubmed</modelPackage>
+	                        </configuration>
+	                    </execution>
+	                </executions>
+	            </plugin>
+	        </plugins>
+        </pluginManagement>
     </build>
     <dependencies>
         <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations -->
@@ -86,4 +175,35 @@
             <version>2.8.5</version>
         </dependency>
     </dependencies>
+    
+    <profiles>
+		<!-- GPG Signature on release -->
+		<profile>
+			<id>release-sign-artifacts</id>
+			<activation>
+				<property>
+					<name>performRelease</name>
+					<value>true</value>
+				</property>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<version>${version.maven-gpg-plugin}</version>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
