--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>edu.cornell.weill.reciter</groupId>
     <artifactId>reciter-pubmed-model</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0</version>
     <name>ReCiter-PubMed-Model</name>
     <description>A set of classes representing a PubMed article</description>
     
@@ -12,7 +11,7 @@
 		<connection>scm:git:git://github.com/wcmc-its/ReCiter-PubMed-Model.git</connection>
 		<developerConnection>scm:git:git@github.com:wcmc-its/ReCiter-PubMed-Model.git</developerConnection>
 		<url>https://github.com/wcmc-its/ReCiter-Identity-Model</url>
-		<tag>HEAD</tag>
+		<tag>1.0</tag>
 	</scm>
     
     <distributionManagement>
@@ -44,8 +43,8 @@
 	                <artifactId>maven-compiler-plugin</artifactId>
 	                <version>3.3</version>
 	                <configuration>
-	                    <source/>
-	                    <target/>
+	                    <source />
+	                    <target />
 	                </configuration>
 	            </plugin>
 	            <plugin>
