--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,31 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>edu.cornell.weill.reciter</groupId>
     <artifactId>reciter-pubmed-model</artifactId>
-    <version>1.0</version>
+    <version>2.0.0-SNAPSHOT</version>
     <name>ReCiter-PubMed-Model</name>
     <description>A set of classes representing a PubMed article</description>
     
+    <organization>
+		<url>https://github.com/wcmc-its</url>
+		<name>WCM ITS</name>
+	</organization>
+
+	<licenses>
+		<license>
+			<name>The Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+		</license>
+	</licenses>
+
+	<developers>
+		<developer>
+			<name>Sarbajit Dutta</name>
+			<email>szd2013@med.cornell.edu</email>
+			<organization>WCM ITS</organization>
+			<organizationUrl>https://github.com/wcmc-its</organizationUrl>
+			<timezone>GMT-5</timezone>
+		</developer>
+	</developers>
     
     <scm>
 		<connection>scm:git:git://github.com/wcmc-its/ReCiter-PubMed-Model.git</connection>
