--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>edu.cornell.weill.reciter</groupId>
     <artifactId>reciter-pubmed-model</artifactId>
-    <version>2.0.0</version>
+    <version>2.0.0-SNAPSHOT</version>
     <name>ReCiter-PubMed-Model</name>
     <description>A set of classes representing a PubMed article</description>
     
@@ -32,7 +32,7 @@
 		<connection>scm:git:git://github.com/wcmc-its/ReCiter-PubMed-Model.git</connection>
 		<developerConnection>scm:git:git@github.com:wcmc-its/ReCiter-PubMed-Model.git</developerConnection>
 		<url>https://github.com/wcmc-its/ReCiter-Identity-Model</url>
-		<tag>2.0.0-SNAPSHOT</tag>
+		<tag>1.0</tag>
 	</scm>
     
     <distributionManagement>
