--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,10 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>edu.cornell.weill.reciter</groupId>
     <artifactId>reciter-pubmed-model</artifactId>
-    <version>2.0.2-SNAPSHOT</version>
+    <version>2.0.1-SNAPSHOT</version>
     <name>ReCiter-PubMed-Model</name>
     <description>A set of classes representing a PubMed article</description>
+    <url>https://github.com/wcmc-its/ReCiter-PubMed-Model</url>
     
     <organization>
 		<url>https://github.com/wcmc-its</url>
