added correct org name

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     
     <organization>
 		<url>https://github.com/wcmc-its</url>
-		<name>WCM ITS</name>
+		<name>Weill Cornell Medicine ITS</name>
 	</organization>
 
 	<licenses>
@@ -23,7 +23,7 @@
 		<developer>
 			<name>Sarbajit Dutta</name>
 			<email>szd2013@med.cornell.edu</email>
-			<organization>WCM ITS</organization>
+			<organization>Weill Cornell Medicine ITS</organization>
 			<organizationUrl>https://github.com/wcmc-its</organizationUrl>
 			<timezone>GMT-5</timezone>
 		</developer>
@@ -56,6 +56,7 @@
         <version.maven-source-plugin>3.0.1</version.maven-source-plugin>
 		<version.maven-javadoc-plugin>2.10.4</version.maven-javadoc-plugin>
 		<version.maven-scm-provider-gitexe>1.9.5</version.maven-scm-provider-gitexe>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <build>
         <sourceDirectory>src</sourceDirectory>
