--- a/pom.xml
+++ b/pom.xml
@@ -165,15 +165,19 @@
 	                </executions>
 	            </plugin>
 	            <plugin>
+				    <groupId>org.eluder.coveralls</groupId>
+				    <artifactId>coveralls-maven-plugin</artifactId>
+				    <version>4.3.0</version>
+				</plugin>
+				<plugin>
 				    <groupId>org.codehaus.mojo</groupId>
 				    <artifactId>cobertura-maven-plugin</artifactId>
 				    <version>2.7</version>
 				    <configuration>
-				        <formats>
-				            <format>html</format>
-				            <format>xml</format>
-				        </formats>
-				        <check />
+				        <format>xml</format>
+				        <maxmem>256m</maxmem>
+				        <!-- aggregated reports for multi-module projects -->
+				        <aggregate>true</aggregate>
 				    </configuration>
 				</plugin>
 	        </plugins>
