--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,4 +14,5 @@ phases:
   post_build:
     commands:
       - echo Build completed on `date`
-      - mvn clean cobertura:cobertura coveralls:report -DrepoToken=$COVERALLS_TOKEN
+      - echo $COVERALLS_TOKEN
+      - mvn cobertura:cobertura coveralls:report -DrepoToken=$COVERALLS_TOKEN
